tests/baselines/reference/parserStrictMode10.errors.txt
==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode10.ts (1 errors) ====
    "use strict";
    function f(eval) {
               ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    }